Bug 1849109 - Fix popup sizing with fractional scales. r=stransky

We probably need more fixes on top, I see sometimes we get stuck in a
move-to-rect loop (probably because our gtk call doesn't know about the
fractional scale).

But this fixes the sizing and positioning at least.

Differential Revision: https://phabricator.services.mozilla.com/D228602